2010-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/browse-url.el (browse-url-browser-function): Revert the
	default back to the previous value, since the new value broke
	mailclient.el.
	(browse-url-mailto-function): New variable for mailto: URLs.
	(browse-url): Use the new variable for mailto: URLs.

2010-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eshell/esh-cmd.el (eshell-parse-command):
	* eshell/esh-arg.el (eshell-parse-arguments):
	* eshell/em-script.el (eshell-source-file):
	Use with-silent-modifications.

2010-11-23  Chong Yidong  <cyd@stupidchicken.com>

	* vc/vc.el (vc-merge): Remove optional arg PROMPT.  Always prompt
	for a merge location.

	* vc/vc-bzr.el (vc-bzr-pull): Remove unused var.
	(vc-bzr-merge-branch): Always prompt.
	(vc-bzr-async-command): Use the full branch filename.

2010-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* shell.el (shell): Use current-buffer by default if it's already
	a shell mode buffer and its process is dead.
	Suggested by <jemarch@gnu.org>.

2010-11-23  Tassilo Horn  <tassilo@member.fsf.org>

	* mail/emacsbug.el (report-emacs-bug-query-existing-bugs):
	Mention that the keywords should be comma separated.

2010-11-23  Chong Yidong  <cyd@stupidchicken.com>

	* vc/vc.el (vc-merge): Use vc-BACKEND-merge-branch if available.
	Accept optional prefix arg meaning to prompt for a command.
	(vc-update): Use vc-BACKEND-pull if available.  Accept optional
	prefix arg meaning to prompt for a command.
	(vc-pull): Alias for vc-update.

	* vc/vc-bzr.el (vc-bzr-admin-branchconf, vc-bzr-history): New vars.
	(vc-bzr--branch-conf, vc-bzr-async-command, vc-bzr-pull)
	(vc-bzr-merge-branch): New functions, implementing merge-branch
	and pull operations.

2010-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in: Fix up last merge.

	* vc/diff.el (diff-old-temp-file, diff-new-temp-file): Remove.
	(diff-sentinel): Get them as arguments instead.
	(diff-old-file, diff-new-file, diff-extra-args): Remove.